@@ -1,3 +1,8 @@
+USER LEVEL CHANGES
+
+-- Added options to the printSamplers() method of MCMC configuration objects, which control the level of detail displayed.  These allow control for displaying default values, displaying values of non-scalar elements, and displaying the dependency lists of conjugate samplers.
+
+
                            CHANGES IN VERSION 0.6-4 (March 2017)
 
 USER LEVEL CHANGES
